--- a/index.html
+++ b/index.html
@@ -85,8 +85,8 @@
     const description = document.getElementById('description');
     const descriptions = [
         "Sandy's Labubu",
-        "Australia building half as many homes for every hour worked.",
-        "CREATE MORE IRR signed, BPOs will be ‘very happy with 50% work from home’."
+        "Australia Construction Equipment Rental Market Report 2024",
+        "Metro Manila leads as BPO location choice, plus additional headlines"
     ];
 
     function moveSlide(step) {
