--- a/index.html
+++ b/index.html
@@ -63,8 +63,8 @@
 <div class="carousel-container">
     <div class="description" id="description">Description</div>
     <div class="carousel" id="carousel">
-        <a href="https://www.hindustantimes.com/lifestyle/festivals/happy-womens-day-2025-50-wishes-quotes-images-gifs-to-share-with-your-mother-sister-girlfriend-wife-and-friend-101741258702759.html" target="_blank">
-            <img src="https://www.hindustantimes.com/ht-img/img/2025/03/08/550x309/happy_womens_day_wishes_1741415541134_1741415545984.png" alt="Slide 1">
+        <a href="https://www.defence.gov.au/news-events/releases/2025-04-25/anzac-day-2025" target="_blank">
+            <img src="https://live-production.wcms.abc-cdn.net.au/c75b778de4772e6f7cc25c028809a3db?impolicy=wcms_crop_resize&cropH=2339&cropW=3509&xPos=0&yPos=141&width=862&height=575" alt="Slide 1">
         </a>
         <a href="https://www.sbs.com.au/news/article/australias-home-building-headache-why-its-taking-longer-and-costing-more/bo607urut" target="_blank">
             <img src="https://images.sbs.com.au/dims4/default/66e1fb9/2147483647/strip/true/crop/5568x3132+0+290/resize/1280x720!/quality/90/?url=http%3A%2F%2Fsbs-au-brightspot.s3.amazonaws.com%2F2d%2F8b%2F868573234a80bf090e0bcbceb174%2F20221110001728105866-original.jpg&imwidth=1280" alt="Slide 2">
@@ -84,7 +84,7 @@
     const totalSlides = slides.length;
     const description = document.getElementById('description');
     const descriptions = [
-        "Happy Women’s Day 2025",
+        "Anzac Day 2025",
         "Australia's home-building headache: Why it's taking longer and costing more",
         "Viva Energy advances low-carbon fuels for construction"
     ];
